--- a/style.css
+++ b/style.css
@@ -6401,6 +6401,7 @@ header.entry-header .date-and-thumbnail time.published {
   font-weight: bolder;
   text-transform: uppercase;
   padding: 40px 15px;
+  overflow-wrap: break-word;
 }
 header.entry-header .entry-title {
   font-size: 1.875rem;
@@ -6449,7 +6450,6 @@ article:not(.has-post-thumbnail).page header.entry-header h1 {
 
 .has-post-thumbnail header.entry-header .date-and-thumbnail .entry-meta {
   position: absolute;
-  font-size: 1.25rem;
 }
 
 article:not(.has-post-thumbnail) header.entry-header {
